Horizontal scroll fixed - Blog init

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,12 +10,11 @@
     font-family: 'Syne_Mono';
     color: #ffffff;
     text-transform: uppercase;
-    font-size: 10vmin;
+    font-size: 13vmin;
     margin-top: 3.12rem;
 }
 
 .scene{
-  width:100vw;
   height:100vh;
   position: relative;
 }
@@ -32,7 +31,7 @@ nav.main{
   position: relative;
   padding: 0.62rem 1.56rem;
   text-align: center;
-  margin-top: 35rem;
+  margin-top: 30rem;
 }
 
 .htmlContent{
